--- a/contact.html
+++ b/contact.html
@@ -157,21 +157,7 @@
             <!-- CALL TO ACTION END  -->
         </header>
         <!-- HEADER END  -->
-        <!-- PAGE BANNER -->
-        <div class="page-banner">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-5">
-                        <div class="page-banner-text">
-                            <p>IN- EN VERKOOP VAN AUTO’S</p>
-                            <h1>UW OCCASIONDEALER UIT VAASSEN.</h1>
 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- PAGE BANNER END  -->
 
         <!-- CONTACT INFO  -->
         <div class="contact-area cpy-8">
@@ -274,7 +260,7 @@
                     <div class="occastion-head">
                         <div class="left-title">
                             <h5>hsv auto’s vaassen</h5>
-                            <h2 class="occasion-title">onze dienstverlening</h2>
+                            <h2 class="occasion-title-m">onze dienstverlening</h2>
                         </div>
                     </div>
                 </div>
@@ -487,7 +473,7 @@
                                             </div>
                                             <div class="location">
                                                 <img src="assets/img/icon/location.svg" alt="" class="address-icon">
-                                                <p>Riezebosweg 4, 8171 MG Vaassen, The Netherlands</p>
+                                                <p>Riezebosweg 4, 8171 MG <br> Vaassen, The Netherlands</p>
                                             </div>
                                         </div>
                                     </div>
