--- a/index.html
+++ b/index.html
@@ -1014,7 +1014,7 @@
                     <div class="occastion-head">
                         <div class="left-title">
                             <h5>hsv auto’s vaassen</h5>
-                            <h2 class="occasion-title">onze dienstverlening</h2>
+                            <h2 class="occasion-title-m">onze dienstverlening</h2>
                         </div>
                     </div>
                 </div>
@@ -1226,7 +1226,7 @@
                                             </div>
                                             <div class="location">
                                                 <img src="assets/img/icon/location.svg" alt="" class="address-icon">
-                                                <p>Riezebosweg 4, 8171 MG Vaassen, The Netherlands</p>
+                                                <p>Riezebosweg 4, 8171 MG <br> Vaassen, The Netherlands</p>
                                             </div>
                                         </div>
                                     </div>
@@ -1248,7 +1248,7 @@
                             <div class="last-footer collapse list-unstyled" id="copyright">
                                 <div class="copy-sec">
                                     <h5>Copyright © 2021 HSV Auto’s. All rights reserved.</h5>
-                                    <p>Made with <img src="assets/img/icon/hart.svg" alt=""> by Huqson</p>
+                                    <p>Made with <img src="assets/img/icon/hart.svg" alt=""> by <a href="" class="company-by">Huqson</a></p>
                                 </div>
                                 <div class="right-area">
                                     <div class="footer-social">
