--- a/occasion.html
+++ b/occasion.html
@@ -201,7 +201,7 @@
                         <i class="icofont-close"></i>
                     </div>
                     <div class="filter-col-5">
-                        <label>Merk</label>
+                        <label>Merken</label>
                         <div class="dropdown filter-dp-manu">
                             <button class="dropdown-toggle filter-dp">
                                 Alle merken
@@ -223,14 +223,6 @@
                                         </label>
                                     </div>
                                 </li>
-                                <!-- <li>
-                                    <div class="form-check">
-                                        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
-                                        <label class="form-check-label" for="flexRadioDefault3">
-                                            Alle merken
-                                        </label>
-                                    </div>
-                                </li> -->
                                 <li>
                                     <div class="form-check">
                                         <input class="form-check-input" type="checkbox" name="flexRadioDefault" id="flexRadioDefault4">
@@ -260,7 +252,7 @@
                         </div>
                     </div>
                     <div class="filter-col-5 se-border">
-                        <label>Merk</label>
+                        <label>Modellen</label>
                         <div class="dropdown filter-dp-manu">
                             <button class="dropdown-toggle filter-dp">
                                 Alle merken
@@ -306,7 +298,7 @@
                         </div>
                     </div>
                     <div class="filter-col-5">
-                        <label>Merk</label>
+                        <label>Brandstof</label>
                         <div class="dropdown filter-dp-manu">
                             <button class="dropdown-toggle filter-dp">
                                 Alle merken
@@ -323,7 +315,7 @@
                         </div>
                     </div>
                     <div class="filter-col-5 se-border m-af-none">
-                        <label>Merk</label>
+                        <label>Tranmissie</label>
                         <div class="dropdown filter-dp-manu">
                             <button class="dropdown-toggle filter-dp">
                                 Alle merken
@@ -340,7 +332,7 @@
                         </div>
                     </div>
                     <div class="filter-col-5">
-                        <label>Merk</label>
+                        <label>Sorteer</label>
                         <div class="dropdown filter-dp-manu">
                             <button class="dropdown-toggle filter-dp">
                                 Alle merken
@@ -1062,7 +1054,7 @@
                     <div class="occastion-head">
                         <div class="left-title">
                             <h5>hsv auto’s vaassen</h5>
-                            <h2 class="occasion-title">onze dienstverlening</h2>
+                            <h2 class="occasion-title-m">onze dienstverlening</h2>
                         </div>
                     </div>
                 </div>
@@ -1275,7 +1267,7 @@
                                             </div>
                                             <div class="location">
                                                 <img src="assets/img/icon/location.svg" alt="" class="address-icon">
-                                                <p>Riezebosweg 4, 8171 MG Vaassen, The Netherlands</p>
+                                                <p>Riezebosweg 4, 8171 MG <br> Vaassen, The Netherlands</p>
                                             </div>
                                         </div>
                                     </div>
