--- a/purchase.html
+++ b/purchase.html
@@ -189,13 +189,14 @@
         <div class="purchase-des cpy-5">
             <div class="container">
                 <div class="row">
-                    <div class="page-content">
-                        <h2 class="page-title">
-                            Lorem Ipsum is simply dummy text of the
-                        </h2>
-                        <p>Binnen een half uur rijden vanaf Apeldoorn, Zwolle en Deventer vindt u ons midden in het pittoreske dorpje Oene. De koffie staat altijd klaar! En wilt u een vrijblijvend advies? Wij helpen u graag!Wij bezorgen gratis binnen een
-                            straal van 30 km rondom Oene. Daarbuiten is bezorging mogelijk tegen betaling. Wij leveren uitsluitend tegen contante betaling bij aflevering (mobiel pinnen is ook mogelijk).</p>
-
+                    <div class="col-lg-10">
+                        <div class="page-content">
+                            <h2 class="page-title">
+                                Lorem Ipsum is simply dummy text of the
+                            </h2>
+                            <p>Binnen een half uur rijden vanaf Apeldoorn, Zwolle en Deventer vindt u ons midden in het pittoreske dorpje Oene. De koffie staat altijd klaar! En wilt u een vrijblijvend advies? Wij helpen u graag!Wij bezorgen gratis binnen
+                                een straal van 30 km rondom Oene. Daarbuiten is bezorging mogelijk tegen betaling. Wij leveren uitsluitend tegen contante betaling bij aflevering (mobiel pinnen is ook mogelijk).</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -399,7 +400,7 @@
                     <div class="occastion-head">
                         <div class="left-title">
                             <h5>hsv auto’s vaassen</h5>
-                            <h2 class="occasion-title">onze dienstverlening</h2>
+                            <h2 class="occasion-title-m">onze dienstverlening</h2>
                         </div>
                     </div>
                 </div>
@@ -612,7 +613,7 @@
                                             </div>
                                             <div class="location">
                                                 <img src="assets/img/icon/location.svg" alt="" class="address-icon">
-                                                <p>Riezebosweg 4, 8171 MG Vaassen, The Netherlands</p>
+                                                <p>Riezebosweg 4, 8171 MG <br> Vaassen, The Netherlands</p>
                                             </div>
                                         </div>
                                     </div>
