--- a/contact.html
+++ b/contact.html
@@ -97,7 +97,7 @@
                     <div class="container">
                         <div class="navigation-inner">
                             <div class="logo">
-                                <a href="" class="logo-link"><img src="assets/img/logo.svg" alt=""></a>
+                                <a href="" class="logo-link"><img src="assets/img/logo.jpeg" alt=""></a>
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul mobile-menu">
@@ -174,22 +174,22 @@
                                     </p>
                                     <ul>
                                         <li>
-                                            <div class="contact-text">
+                                            <a href="" class="contact-text">
                                                 <img src="assets/img/icon/phone-2.svg" alt="">
                                                 <p>+31 (0)578 61 77 88</p>
-                                            </div>
+                                            </a>
                                         </li>
                                         <li>
-                                            <div class="contact-text">
+                                            <a href="" class="contact-text">
                                                 <img src="assets/img/icon/phone-2.svg" alt="">
                                                 <p>+31 (0) 622 37 69 69</p>
-                                            </div>
+                                            </a>
                                         </li>
                                         <li>
-                                            <div class="contact-text">
+                                            <a href="" class="contact-text">
                                                 <img src="assets/img/icon/mail-2.svg" alt="">
                                                 <p>info@hsvautos.nl</p>
-                                            </div>
+                                            </a>
                                         </li>
                                     </ul>
                                     <div class="contact-location">
@@ -351,7 +351,7 @@
                     <div class="container">
                         <div class="navigation-inner">
                             <div class="logo">
-                                <a href="" class="logo-link"><img src="assets/img/logo.svg" alt=""></a>
+                                <a href="" class="logo-link"><img src="assets/img/logo.jpeg" alt=""></a>
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul">
@@ -473,7 +473,7 @@
                                             </div>
                                             <div class="location">
                                                 <img src="assets/img/icon/location.svg" alt="" class="address-icon">
-                                                <p>Riezebosweg 4, 8171 MG <br> Vaassen, The Netherlands</p>
+                                                <a href="" class="under-map">Riezebosweg 4, 8171 MG <br> Vaassen, The Netherlands</a>
                                             </div>
                                         </div>
                                     </div>
@@ -495,7 +495,9 @@
                             <div class="last-footer collapse list-unstyled" id="copyright">
                                 <div class="copy-sec">
                                     <h5>Copyright © 2021 HSV Auto’s. All rights reserved.</h5>
-                                    <p>Made with <img src="assets/img/icon/hart.svg" alt=""> by Huqson</p>
+                                    <p>Made with <img src="assets/img/icon/hart.svg" alt=""> by
+                                        <a href="" class="company-by"></a>Huqson</a>
+                                    </p>
                                 </div>
                                 <div class="right-area">
                                     <div class="footer-social">
