--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
                     <div class="container">
                         <div class="navigation-inner">
                             <div class="logo">
-                                <a href="" class="logo-link"><img src="assets/img/logo.svg" alt=""></a>
+                                <a href="" class="logo-link"><img src="assets/img/logo.jpeg" alt=""></a>
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul mobile-menu">
@@ -217,8 +217,51 @@
             <div class="container">
                 <div class="row reverse">
                     <div class="col-lg-6 mb-4">
-                        <div class="signature-area-img">
-                            <img src="assets/img/banner/6.png" alt="">
+                        <div class="row">
+                            <div class="col-6">
+                                <div class="dealer-product mb-4">
+                                    <img src="assets/img/banner/1.png" alt="" class="dealer-product-img">
+                                    <a href="" class="dealer-contact">
+                                        <div class="dealer-contact-info">
+                                            <h4>Contact</h4>
+                                            <p class="contact-btn">Learn More <img src="assets/img/icon/right.svg" alt=""></p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="dealer-product mb-4">
+                                    <img src="assets/img/banner/1.png" alt="" class="dealer-product-img">
+                                    <a href="" class="dealer-contact">
+                                        <div class="dealer-contact-info">
+                                            <h4>Contact</h4>
+                                            <p class="contact-btn">Learn More <img src="assets/img/icon/right.svg" alt=""></p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="dealer-product mb-4">
+                                    <img src="assets/img/banner/2.png" alt="" class="dealer-product-img">
+                                    <a href="" class="dealer-contact">
+                                        <div class="dealer-contact-info">
+                                            <h4>Contact</h4>
+                                            <p class="contact-btn">Learn More <img src="assets/img/icon/right.svg" alt=""></p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="col-6">
+                                <div class="dealer-product mb-4">
+                                    <img src="assets/img/banner/2.png" alt="" class="dealer-product-img">
+                                    <a href="" class="dealer-contact">
+                                        <div class="dealer-contact-info">
+                                            <h4>Contact</h4>
+                                            <p class="contact-btn">Learn More <img src="assets/img/icon/right.svg" alt=""></p>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="col-lg-6 mb-4">
@@ -453,7 +496,7 @@
                     <div class="container">
                         <div class="navigation-inner">
                             <div class="logo">
-                                <a href="" class="logo-link"><img src="assets/img/logo.svg" alt=""></a>
+                                <a href="" class="logo-link"><img src="assets/img/logo.jpeg" alt=""></a>
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul">
@@ -575,7 +618,7 @@
                                             </div>
                                             <div class="location">
                                                 <img src="assets/img/icon/location.svg" alt="" class="address-icon">
-                                                <p>Riezebosweg 4, 8171 MG <br> Vaassen, The Netherlands</p>
+                                                <a href="" class="under-map">Riezebosweg 4, 8171 MG <br> Vaassen, The Netherlands</a>
                                             </div>
                                         </div>
                                     </div>
@@ -597,7 +640,7 @@
                             <div class="last-footer collapse list-unstyled" id="copyright">
                                 <div class="copy-sec">
                                     <h5>Copyright © 2021 HSV Auto’s. All rights reserved.</h5>
-                                    <p>Made with <img src="assets/img/icon/hart.svg" alt=""> by Huqson</p>
+                                    <p>Made with <img src="assets/img/icon/hart.svg" alt=""> by <a href="" class="company-by">Huqson</a></p>
                                 </div>
                                 <div class="right-area">
                                     <div class="footer-social">
