--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="container">
                         <div class="navigation-inner">
                             <div class="logo">
-                                <a href="" class="logo-link"><img src="assets/img/logo.svg" alt=""></a>
+                                <a href="" class="logo-link"><img src="assets/img/logo.jpeg" alt=""></a>
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul mobile-menu">
@@ -1104,7 +1104,7 @@
                     <div class="container">
                         <div class="navigation-inner">
                             <div class="logo">
-                                <a href="" class="logo-link"><img src="assets/img/logo.svg" alt=""></a>
+                                <a href="" class="logo-link"><img src="assets/img/logo.jpeg" alt=""></a>
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul">
@@ -1226,7 +1226,7 @@
                                             </div>
                                             <div class="location">
                                                 <img src="assets/img/icon/location.svg" alt="" class="address-icon">
-                                                <p>Riezebosweg 4, 8171 MG <br> Vaassen, The Netherlands</p>
+                                                <a href="" class="under-map">Riezebosweg 4, 8171 MG <br> Vaassen, The Netherlands</a>
                                             </div>
                                         </div>
                                     </div>
