--- a/occasion.html
+++ b/occasion.html
@@ -97,7 +97,7 @@
                     <div class="container">
                         <div class="navigation-inner">
                             <div class="logo">
-                                <a href="" class="logo-link"><img src="assets/img/logo.svg" alt=""></a>
+                                <a href="" class="logo-link"><img src="assets/img/logo.jpeg" alt=""></a>
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul mobile-menu">
@@ -1145,7 +1145,7 @@
                     <div class="container">
                         <div class="navigation-inner">
                             <div class="logo">
-                                <a href="" class="logo-link"><img src="assets/img/logo.svg" alt=""></a>
+                                <a href="" class="logo-link"><img src="assets/img/logo.jpeg" alt=""></a>
                             </div>
                             <div class="menu">
                                 <ul class="menu-ul">
@@ -1267,7 +1267,7 @@
                                             </div>
                                             <div class="location">
                                                 <img src="assets/img/icon/location.svg" alt="" class="address-icon">
-                                                <p>Riezebosweg 4, 8171 MG <br> Vaassen, The Netherlands</p>
+                                                <a href="" class="under-map">Riezebosweg 4, 8171 MG <br> Vaassen, The Netherlands</a>
                                             </div>
                                         </div>
                                     </div>
@@ -1289,7 +1289,7 @@
                             <div class="last-footer collapse list-unstyled" id="copyright">
                                 <div class="copy-sec">
                                     <h5>Copyright © 2021 HSV Auto’s. All rights reserved.</h5>
-                                    <p>Made with <img src="assets/img/icon/hart.svg" alt=""> by Huqson</p>
+                                    <p>Made with <img src="assets/img/icon/hart.svg" alt=""> by <a href="" class="company-by">Huqson</a></p>
                                 </div>
                                 <div class="right-area">
                                     <div class="footer-social">
